[package]
name = "codechain-db"
version = "0.2.0"
authors = ["CodeChain Team <hi@codechain.io>", "Parity Technologies <admin@parity.io>"]
description = "Databases that CodeChain uses"
license = "AGPL-3.0"
edition = "2018"

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
kvdb = "0.1"
plain_hasher = "0.2"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5.0", tag = "v0.5.1" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0" }

[dev-dependencies]
kvdb-memorydb = "0.1"
